[project]
name = "deceptus-android"
version = "0.1.0"
description = "One-command driver to build and run the Deceptus WASM build as an Android (GeckoView) app"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deceptus-android = "run:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["run.py"]

[tool.hatch.build.targets.wheel.sources]
"run.py" = "run.py"
