[project]
name = "extract-translations"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
extract-translations = "extract_translations:main"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extract_translations"]
