[package]
name = "deceptus_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "blocking", "json"] }
regex = "1"
zip = { version = "2", features = ["deflate"] }
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
eframe = { version = "0.27", features = ["wgpu"] }
parking_lot = "0.12"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
